# RIMACS

./: CMakeLists.txt  CMakeLists.txt.in  INSTALLATION.doxygen  LICENSE  README  mainpage.doxygen
Test/: CMakeLists.txt  EquivalenceClassTester.cpp  FunctorTester.cpp  InitializationUtils.hpp  MCESTester.cpp  MCSResultTester.cpp  MCSTester.cpp  MinimumResultConstraintTester.cpp  NodeOrderTester.cpp  RIMACSexampleTester.cpp  ResultVerification.hpp  SubgraphMappingTester.cpp  VertexMappingTester.cpp  main.cpp
Test/Dimacs/: CMakeLists.txt  DimacsGraph.cpp  DimacsGraph.hpp  DimacsGraphFunctor.cpp  DimacsGraphFunctor.hpp
Test/Examples/: MCES_size_demo_query.dimacs  MCES_size_demo_target.dimacs  TestCases_10_f.dimacs  TestCases_10_t.dimacs  TestCases_11_f.dimacs  TestCases_11_t.dimacs  TestCases_12_f.dimacs  TestCases_12_t.dimacs  TestCases_1_f.dimacs  TestCases_1_t.dimacs  TestCases_2_f.dimacs  TestCases_2_t.dimacs  TestCases_3_f.dimacs  TestCases_3_t.dimacs  TestCases_4_t.dimacs  TestCases_5_t.dimacs  TestCases_6_t.dimacs  TestCases_7_f.dimacs  TestCases_7_t.dimacs  TestCases_8_t.dimacs  TestCases_9_f.dimacs  TestCases_9_t.dimacs  caffeine.dimacs  chain_and_ring.dimacs  chains_and_ring_1.dimacs  chains_and_ring_10.dimacs  chains_and_ring_11.dimacs  chains_and_ring_12.dimacs  chains_and_ring_13.dimacs  chains_and_ring_14.dimacs  chains_and_ring_2.dimacs  chains_and_ring_3.dimacs  chains_and_ring_4.dimacs  chains_and_ring_5.dimacs  chains_and_ring_6.dimacs  chains_and_ring_7.dimacs  chains_and_ring_8.dimacs  chains_and_ring_9.dimacs  dMCSdemo_1.dimacs  dMCSdemo_2.dimacs  (+35 more)
documentation/: doxygen.cfg
include/RIMACS/: ASSERT.hpp  Config.hpp  Forward.hpp  Logger.hpp  MCSResult.hpp  MCSRunner.hpp  ResultCompare.hpp  ResultCompareTemplate.hpp  Structs.hpp
include/RIMACS/Algorithm/: Backtrack.hpp  CompareUtils.hpp  SubgraphMapping.hpp  SubgraphMappingTemplate.hpp  VertexMapping.hpp  VertexMappingTemplate.hpp  WeightTypeTraits.hpp
include/RIMACS/Functors/: CachingEdgeCompatibilityFunctor.hpp  Functors.hpp  GraphCachingFunctor.hpp  LineGraph.hpp  SwappedMapping.hpp
include/RIMACS/Utils/: SortedVector.hpp
src/RIMACS/: CMakeLists.txt  MCSRunner.cpp  RIMACS.doxygen
src/RIMACS/Algorithm/: Backtrack.cpp
src/RIMACS/Functors/: Functors.cpp  GraphCachingFunctor.cpp  LineGraph.cpp
